fix z-index on nav

--- a/scss/main.css
+++ b/scss/main.css
@@ -60,6 +60,7 @@ li {
 }
 .nav {
   position: fixed;
+  z-index: 100;
   width: 100%;
   display: flex;
   flex-direction: column;
