--- a/scss/partials/3-Layout/_header.scss
+++ b/scss/partials/3-Layout/_header.scss
@@ -37,6 +37,7 @@
 
 .nav {
     position: fixed;
+    z-index: 100;
     width: 100%;
     display: flex;
     flex-direction: column;
